--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
-        <title>Ketamine • V2</title>
+        <title>Exterium On Top</title>
         <link rel="shortcut icon" type="image/x-icon" href="assets/octopus_pink.png"/>
         <link rel="stylesheet" href="assets/style.css"/>
         <meta content="Ketamine V2" property="og:title"/>
@@ -169,11 +169,11 @@
 
         <div class="container_main">
             <img class='img' src="assets/octopus_white.png">
-            <a class="title">Ketamine V2</a>
+            <a class="title">Exterium</a>
             <ul>
                 [
-                <a class="text" href="https://discord.gg/BBRm2cNuxa" target="_blank">discord</a>
-                <a class="text" href="Empty" target="_blank">| TOS</a>
+                <a class="text" href="https://discord.gg/8tgWnPgxkp" target="_blank">Discord</a>
+                <a class="text" href="store.html" target="_blank">| Products</a>
                 ]
             </ul>
         </div>
