--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <title>Exterium On Top</title>
         <link rel="shortcut icon" type="image/x-icon" href="assets/octopus_pink.png"/>
         <link rel="stylesheet" href="assets/style.css"/>
-        <meta content="Ketamine V2" property="og:title"/>
-        <meta content="Lua obfuscator." property="og:description"/>
-        <meta content="https://firoxus.github.io/octohook.xyz/" property="og:url"/>
+        <meta content="Exterium" property="og:title"/>
+        <meta content="Exterium on top." property="og:description"/>
+        <meta content="https://exterium.xyz/" property="og:url"/>
         <meta content="assets/octopus_pink" property="og:image"/>
         <meta content="#FF81FF" data-react-helmet="true" name="theme-color"/>
     </head>
