--- a/index.html
+++ b/index.html
@@ -169,11 +169,11 @@
 
         <div class="container_main">
             <img class='img' src="assets/octopus_white.png">
-            <a class="title">Exterium</a>
+            <a class="title">Exterium.xyz</a>
             <ul>
                 [
                 <a class="text" href="https://discord.gg/8tgWnPgxkp" target="_blank">Discord</a>
-                <a class="text" href="store.html" target="_blank">| Products</a>
+                <a class="text" href="assets/store.html" target="_blank">| Products</a>
                 ]
             </ul>
         </div>
