--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <ul>
                 [
                 <a class="text" href="https://discord.gg/8tgWnPgxkp" target="_blank">Discord</a>
-                <a class="text" href="assetsv2/store.html" target="_blank">| Products</a>
+                <a class="text" href="assetsV2/store.html" target="_blank">| Products</a>
                 ]
             </ul>
         </div>
