--- a/assetsV2/store.html
+++ b/assetsV2/store.html
@@ -108,7 +108,7 @@
   <div id="valorant" class="animate one fadeInUpBig dg cstShdw rounded cstHegt2">
     <a draggable="false" download href="https://link-target.net/366125/exterium-external" download="file" class="group cstHegt block rounded overflow-hidden relative mb-2 lg:mb-3">
     <img draggable="false" src="fortnite.png"  class="w-full h-full object-cover object-center group-hover:scale-110 transition duration-200" />
-    <span class="bg-green-600 text-stone-200 text-sm  uppercase rounded-br absolute left-0 top-0 px-3 py-1">undetected</span>
+    <span class="bg-yellow-500 text-stone-200 text-sm  uppercase rounded-br absolute left-0 top-0 px-3 py-1">Updating..</span>
   </a>
     <div class="text-left ml-2">
         <a class="text-sm text-stone-300 block font-bold mt-1">Exterium external</a>
