--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <a class="title">Exterium.xyz</a>
             <ul>
                 [
-                <a class="text" href="https://discord.gg/8tgWnPgxkp" target="_blank">Discord</a>
+                <a class="text" href="discord.gg/exterium" target="_blank">Discord</a>
                 <a class="text" href="https://exterium.xyz/assetsV2/store" target="_blank">| Products</a>
                 ]
             </ul>
